--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
     Please enable it to continue.</strong>
 </noscript>
+<!--<script src='//unpkg.com/@element-plus/icons-vue'></script>-->
 <div id='app'></div>
 
 
